kubernetes/apps/security/keycloak/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: keycloak
  namespace: security
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking
  to:
    - group: ""
      kind: Service
