kubernetes/apps/security/keycloak/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: security
spec:
  hostnames:
    - sso.monosense.dev
  parentRefs:
    - name: cilium-external
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          namespace: security
          port: 8080
